--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,9 @@
-# ---Placholder---
-DATABASE_URL=
+# PostgreSQL DB Configuration
+POSTGRES_USER=zenskar_user
+POSTGRES_PASSWORD=zenskar_password
+POSTGRES_DB=zenskar_db
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+
+# Application Database URL
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}"
