--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,7 +29,7 @@ services:
       db:
         condition: service_healthy
     command: >
-      sh -c "alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port 8000"
+      sh -c "alembic upgrade head && uvicorn main:app --reload --host 0.0.0.0 --port 8000"
 
 volumes:
   postgres_data:
