--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,9 @@ POSTGRES_PORT=5432
 
 # Application Database URL
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}"
+
+KAFKA_BOOTSTRAP_SERVERS=kafka:29092
+KAFKA_CUSTOMER_TOPIC=customer_events
+
+# Stripe Configuration
+STRIPE_API_KEY=
