--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -58,7 +58,7 @@ services:
       kafka:
         condition: service_healthy
     command: >
-      sh -c "alembic upgrade head && uvicorn main:app --reload --host 0.0.0.0 --port 8000"
+      sh -c "alembic upgrade head && python worker.py & uvicorn main:app --reload --host 0.0.0.0 --port 8000"
 
 volumes:
   postgres_data:
