WIP modularizing the code

--- a/.env.template
+++ b/.env.template
@@ -13,3 +13,11 @@ KAFKA_CUSTOMER_TOPIC=customer_events
 
 # Stripe Configuration
 STRIPE_API_KEY=
+STRIPE_WEBHOOK_SECRET=
+
+# Integration Configuration
+ENABLED_INTEGRATIONS=stripe
+STRIPE_INTEGRATION_ENABLED=true
+
+# Logger Configuration
+LOGGER=INFO
