--- a/.env.template
+++ b/.env.template
@@ -16,8 +16,29 @@ STRIPE_API_KEY=
 STRIPE_WEBHOOK_SECRET=
 
 # Integration Configuration
-ENABLED_INTEGRATIONS=stripe
+ENABLED_INTEGRATIONS=stripe,salesforce
 STRIPE_INTEGRATION_ENABLED=true
+
+# Catalog Configuration
+PRIMARY_CATALOG=postgresql
+SYNC_CATALOGS=salesforce,mongodb
+
+# Salesforce Configuration (optional)
+SALESFORCE_ENABLED=false
+SALESFORCE_INSTANCE_URL=
+SALESFORCE_CLIENT_ID=
+SALESFORCE_CLIENT_SECRET=
+SALESFORCE_USERNAME=
+SALESFORCE_PASSWORD=
+SALESFORCE_SECURITY_TOKEN=
+
+# MongoDB Configuration (optional)
+MONGODB_ENABLED=false
+MONGODB_CONNECTION_STRING=
+
+# Redis Configuration (optional)
+REDIS_ENABLED=false
+REDIS_URL=
 
 # Logger Configuration
 LOGGER=INFO
