Implemented fixes for outward sync edge cases

--- a/.env.template
+++ b/.env.template
@@ -10,6 +10,12 @@ DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST
 
 KAFKA_BOOTSTRAP_SERVERS=kafka:29092
 KAFKA_CUSTOMER_TOPIC=customer_events
+KAFKA_DLQ_TOPIC=customer_events_dlq
+
+# Retry Configuration
+MAX_RETRY_ATTEMPTS=5
+INITIAL_RETRY_DELAY=2
+MAX_RETRY_DELAY=300
 
 # Stripe Configuration
 STRIPE_API_KEY=
