fixes for outward sync failure edge cases have been added

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -50,6 +50,8 @@ services:
     container_name: zenskar_app
     env_file:
       - .env
+    environment:
+      - DOCKER_ENV=true
     ports:
       - "8000:8000"
     volumes:
