fixed potential inward sync  points

--- a/.env.template
+++ b/.env.template
@@ -17,6 +17,10 @@ MAX_RETRY_ATTEMPTS=5
 INITIAL_RETRY_DELAY=2
 MAX_RETRY_DELAY=300
 
+# Conflict Resolution Configuration  
+CONFLICT_RESOLUTION_STRATEGY=flag
+AUTO_RESOLVE_CONFLICTS=false
+
 # Stripe Configuration
 STRIPE_API_KEY=
 STRIPE_WEBHOOK_SECRET=
