--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,7 @@
 # PostgreSQL DB Configuration
-POSTGRES_USER=zenskar_user
-POSTGRES_PASSWORD=zenskar_password
-POSTGRES_DB=zenskar_db
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
 POSTGRES_HOST=db 
 POSTGRES_PORT=5432
 
